# chapchap

./: .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json
api/: .env.example  .nixpacks.toml  Dockerfile  Makefile  README.md  main.py  pyproject.toml
api/core/: config.py  graph.py  logging.py  prompts.py
api/core/langgraph/: graph.py
api/db/: connection.py
api/routers/: job_info.py  resume.py  router.py
scraper/: .env.example  Makefile  README.md  baemin.py  clear_chat_history.py  coupang.py  create_vector_index.py  daangn.py  devsisters.py  drop_vector_index.py  embedder.py  flipster.py  hpcnt.py  hyperithm.py  kakao.py  line.py  naver.py  pyproject.toml  run.sh  tagger.py  test.py  util.py
supabase/: config.toml
supabase/migrations/: 20250429212120_job_info.sql
web/: eslint.config.js  index.html  package-lock.json  package.json
web/src/: App.tsx  index.css
web/src/components/: JobAccordionItem.tsx  animated-text.tsx  mode-toggle.tsx
web/src/components/ui/: button.tsx
web/src/pages/: JobList.tsx  JobMatcher.tsx  JobMatcherText.tsx  Layout.tsx
web/src/services/: jobs.ts  resume.ts
web/src/store/: useResumeStore.ts  useSessionStore.ts
