[project]
name = "chapchap-api"
version = "0.1.0"
description = ""
authors = [
    {name = "rokrokss",email = "q0115643@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "langgraph (>=0.4.1,<0.5.0)",
    "langsmith (>=0.3.42,<0.4.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-core (>=0.3.58,<0.4.0)",
    "langchain-google-genai (>=2.1.4,<3.0.0)",
    "langgraph-checkpoint-postgres (>=2.0.21,<3.0.0)",
    "structlog (>=25.3.0,<26.0.0)",
    "ddtrace (>=3.6.0,<4.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "asgi-correlation-id (>=4.3.4,<5.0.0)",
    "psycopg (>=3.2.7,<4.0.0)",
    "psycopg[binary] (>=3.2.7,<4.0.0)",
    "psycopg[c] (>=3.2.7,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

